--- a/MiniAccounting/Views/User/RegisterUser.cshtml
+++ b/MiniAccounting/Views/User/RegisterUser.cshtml
@@ -44,7 +44,7 @@
 
     <br />
     <button type="submit" class="btn btn-success">Register</button>
-    <a asp-action="Index" class="btn btn-secondary">Back to List</a>
+    <a asp-action="GetAllUsersDetails" class="btn btn-secondary">Back to List</a>
 </form>
 
 @section Scripts {
