--- a/MiniAccounting/Views/Accounts/_ChildAccounts.cshtml
+++ b/MiniAccounting/Views/Accounts/_ChildAccounts.cshtml
@@ -6,26 +6,34 @@
     @foreach (var account in Model)
     {
         <li>
-             
+
 
             <span class="parent-account d-flex justify-content-between align-items-center" data-id="@account.AccountId" tabindex="0" aria-expanded="false">
                 <div class="d-flex align-items-center">
                     <i class="toggle-icon bi bi-caret-right-fill collapsed me-2"></i>
                     <strong>@account.AccountCode</strong> - @account.AccountName
                 </div>
+                @if (ViewBag.RoleName != "Viewer")
+                {
+                    <div class="action-buttons ms-2">
 
-                <div class="action-buttons ms-2">
-                    <a href="@Url.Action("Edit", "Accounts", new { id = account.AccountId })" class="btn btn-sm btn-outline-primary me-1" title="Edit">
-                        <i class="bi bi-pencil-square"></i>
-                    </a>
-                    @if (@account.IsLeaf == 1 && @account.HasVoucher==0)
-                    {
-                        <a href="@Url.Action("Delete", "Accounts", new { id = account.AccountId })" class="btn btn-sm btn-outline-danger" title="Delete" onclick="return confirm('Are you sure you want to delete this account?');">
-                            <i class="bi bi-trash-fill"></i>
+                        <a href="@Url.Action("Create", "Accounts", new { id = account.AccountId })" class="btn btn-sm btn-outline-primary me-1" title="Create">
+                            Add a child
+                        </a>
+
+                        <a href="@Url.Action("Edit", "Accounts", new { id = account.AccountId })" class="btn btn-sm btn-outline-primary me-1" title="Edit">
+                            <i class="bi bi-pencil-square"></i>
+                        </a>
+                        @if (@account.IsLeaf == 1 && @account.HasVoucher == 0)
+                        {
+                            <a href="@Url.Action("Delete", "Accounts", new { id = account.AccountId })" class="btn btn-sm btn-outline-danger" title="Delete" onclick="return confirm('Are you sure you want to delete this account?');">
+                                <i class="bi bi-trash-fill"></i>
                         </a>
                     }
                    
-                </div>
+                </div> 
+
+                }
             </span>
             <ul class="child-container"></ul>
         </li>
