--- a/MiniAccounting/Views/Shared/_Layout.cshtml
+++ b/MiniAccounting/Views/Shared/_Layout.cshtml
@@ -1,4 +1,12 @@
-﻿<!DOCTYPE html>
+﻿@inject IHttpContextAccessor HttpContextAccessor
+
+@{
+    var userId = HttpContextAccessor.HttpContext.Session.GetString("UserId");
+    var roleName = HttpContextAccessor.HttpContext.Session.GetString("RoleName");
+    var isLoggedIn = !string.IsNullOrEmpty(userId);
+}
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -14,17 +22,79 @@
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">MiniAccounting</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
+                aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
+                        </li> 
+
+                        @if (isLoggedIn)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Accounts" asp-action="Index">Accounts</a>
+                            </li>
+                        }
+
+                        @if (roleName =="Admin")
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="GetAllUsersDetails">Manage Users</a>
+                            </li>
+
+                        } 
+
+                        @if (roleName == "Admin" || roleName == "Accountant")
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Voucher" asp-action="Create">Create Voucher</a>
+                            </li>
+
+                        }
+
+
+
+                    </ul>
+                </div>
+
+                <div class="collapse navbar-collapse">
+                    <ul class="navbar-nav ms-auto">
+                        @if (isLoggedIn)
+                        {
+                            @if (roleName =="Admin")
+                            {
+                                <li class="nav-item">
+                                    <span class="nav-link">Hello,
+                                        <a href="@Url.Action("EditUser", "User", new { Id = userId })" class="btn btn-sm btn-outline-primary">
+                                            @roleName
+                                        </a>
+                                       
+                                    </span>
+                                </li>
+                            }
+
+                            else
+                            {
+                                <li class="nav-item">
+                                    <span class="nav-link">Hello, @roleName</span>
+                                </li>
+                            }
+
+                            
+                            <li class="nav-item">
+                                <form asp-controller="Auth" asp-action="Logout" method="post" class="d-inline">
+                                    <button type="submit" class="btn btn-link nav-link">Logout</button>
+                                </form>
+                            </li>
+                        }
+                        else
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="Auth" asp-action="Login">Login</a>
+                            </li>
+                        }
                     </ul>
                 </div>
             </div>
