--- a/MiniAccounting/Views/User/GetAllUsersDetails.cshtml
+++ b/MiniAccounting/Views/User/GetAllUsersDetails.cshtml
@@ -2,11 +2,33 @@
 
 @{
     ViewData["Title"] = "User Management";
+    var has_voucher = ViewBag.Has_Voucher;
+    var index = 0;
 }
 
 <h2 class="mt-4 mb-4 text-center">User Management</h2>
 
-<div class="table-responsive">
+<a asp-action="RegisterUser" class="btn btn-success mt-3">
+    <i class="bi bi-person-plus"></i> Add New User
+</a>
+
+@if (TempData["Success"] != null)
+{
+    <div class="d-flex justify-content-center">
+        <div id="messageCard" class="alert alert-success alert-dismissible fade show shadow-sm rounded-3 py-2 px-3 small mx-auto w-100" role="alert" style="max-width: 600px;">
+            <div class="d-flex align-items-center">
+                <i class="bi bi-check-circle-fill me-2 fs-5"></i>
+                <div class="flex-grow-1">
+                    @TempData["Success"]
+                </div>
+            </div>
+            <button type="button" class="btn-close position-absolute top-0 end-0" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    </div>
+
+}
+
+<div class="table-responsive mt-3">
     <table class="table table-bordered table-hover table-striped">
         <thead class="table-dark text-center">
             <tr>
@@ -28,19 +50,24 @@
                     <td>
                         <a asp-action="EditUser" asp-route-id="@user.Id" class="btn btn-sm btn-primary me-2">
                             <i class="bi bi-pencil-square"></i> Edit
-                        </a>
-                        <a asp-action="DeleteUser" asp-route-id="@user.Id" class="btn btn-sm btn-danger"
-                           onclick="return confirm('Are you sure you want to delete this user?');">
-                            <i class="bi bi-trash"></i> Delete
-                        </a>
+                        </a> 
+
+                        @if(!has_voucher[index])
+                        {
+                            <a asp-action="DeleteUser" asp-route-id="@user.Id" class="btn btn-sm btn-danger">
+                                <i class="bi bi-trash"></i> Delete
+                            </a>
+                        }
+
                     </td>
                 </tr>
+
+                index++;
+                
             }
         </tbody>
     </table>
 </div>
 
-<a asp-action="Create" class="btn btn-success mt-3">
-    <i class="bi bi-person-plus"></i> Add New User
-</a>
+
 
