--- a/MiniAccounting/Views/User/GetAllUsersDetails.cshtml
+++ b/MiniAccounting/Views/User/GetAllUsersDetails.cshtml
@@ -9,7 +9,7 @@
 <h2 class="mt-4 mb-4 text-center">User Management</h2>
 
 <a asp-action="RegisterUser" class="btn btn-success mt-3">
-    <i class="bi bi-person-plus"></i> Add New User
+    Add New User
 </a>
 
 @if (TempData["Success"] != null)
